# CADAI

./: .dockerignore  .gitignore  AI-CAPABILITIES.md  CLAUDE_CODE_PROMPT.md  DOCKER.md  Dockerfile  FEATURES.md  LICENSE  PLAN.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.js
agent-rules/: cnc-focused.yaml  default.yaml  printing-focused.yaml
mechanisms/: README.md
mechanisms/core-open-v1/: manifest.json
model-iteration/: README.md  capability-gaps.md  code-mitigations.md  test-cases.md
python/: drawing_export.py  drawing_view.py  importer.py  manufacturing.py  runner.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/: confidence.rs  consensus.rs  context.rs  design.rs  executor.rs  extract.rs  fallback_templates.rs  iterative.rs  memory.rs  mod.rs  modify.rs  prompts.rs  retrieval.rs  review.rs  rules.rs  semantic_validate.rs  static_validate.rs  telemetry.rs  validate.rs
src-tauri/src/ai/: capabilities.rs  claude.rs  cost.rs  gemini.rs  message.rs  mod.rs  ollama.rs  openai.rs  provider.rs  registry.rs  retry.rs  streaming.rs
src-tauri/src/commands/: cad.rs  chat.rs  drawing.rs  manufacturing.rs  mechanisms.rs  mod.rs  parallel.rs  project.rs  settings.rs
src-tauri/src/mechanisms/: catalog.rs  importer.rs  license.rs  mod.rs  schema.rs
src-tauri/src/python/: detector.rs  installer.rs  mod.rs  runner.rs  venv.rs
src/lib/types/: cad.ts  (+5 more)
tests/: smoke.spec.ts
(+160 files in other folders)
