[package]
name = "cadai-studio"
version = "0.1.0"
description = "AI-powered CAD application"
authors = ["Haakon"]
edition = "2021"

[lib]
name = "cadai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
base64 = "0.22"
dirs = "6"
similar = "2"
sha2 = "0.10"
